wiki/wiki.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: wiki
  name: wiki
  namespace: wiki
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: wiki
    spec:
      containers:
        - image: registry.tech.dreamhack.se/tech/wiki:latest
          imagePullPolicy: Always
          name: wiki
        - image: quay.io/dhtech/dhauth
          imagePullPolicy: Always
          name: dhauth
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
