wiki/wiki-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: wiki
  labels:
    k8s-app: wiki
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: wiki
  type: ClusterIP
